modify os classes